# ModelViewer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  Zero.sln
Libs/Debug/: FreeImagePlusd.lib  FreeImaged.lib  SDL2.lib  glewinfo.txt
Load_3D_model_2/: Camera.h  ForShader.cpp  ForShader.h  Game.cpp  Game.h  InputHandler.h  Load_3D_model_2.vcxproj  Mesh.h  Model.cpp  Model.h  SkyBox.cpp  SkyBox.h  TextRendering.cpp  TextRendering.h  Triangle.cpp  Triangle.h  Vector2D.h  main.cpp
Load_3D_model_2/res/lib/x64/Debug/: FreeImageLibd.lib  FreeImagePlus.lib  SDL2main.lib  freeglutd.lib  freetyped.lib  glew32d.lib
ModelViewer/: Camera.h  ForShader.cpp  ForShader.h  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelViewer.vcxproj  ModelViewer.vcxproj.filters  Scene.cpp  Scene.h  SkyBox.cpp  SkyBox.h  TextRendering.cpp  TextRendering.h  glad.c  main.cpp
ModelViewer/res/lib/x64/Debug/: SDL2_mixer.lib  assimp-vc140-mt.lib
